src/travel/videolibrary.module.scss
@import "../../themes/colors.module";
@import "../../themes/breakpoints";

.headingDash {
	width: 80%;
}

.videoButton {
	position: absolute;
	height: 50px;
	width: 50px;
	top: 50%;
	left: 50%;
	border-radius: 50%;
	transform: translate(-50%, -50%);
	transition: linear 150ms;
	opacity: 0;

	&:hover {
		filter: brightness(0.8);
	}
}

.videoButtonBigger {
	height: 60px;
	width: 60px;
}

.videoCardContainer {
	position: relative;
	transition: linear 200ms;
	cursor: pointer;
	border-radius: 10px;

	&:hover,
	&:focus {
		filter: brightness(1.2);
		.videoButton {
			opacity: 0.7;
		}
	}
}

.lockButton {
	top: 75%;
	opacity: 1;

	@include breakpoint(medium) {
		top: 50%;
		opacity: 0;
	}
}

.videoCardImage {
	border-radius: 5px;
}

